# email-intelligence-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BRANCH_PROTECTION_CHECKLIST.md  BRANCH_PROTECTION_SETUP.md  CONTRIBUTING.md  DELIVERY_COMPLETE.txt  Dockerfile  FINAL_REPORT_TZ123.md  GO_LIVE_PACKAGE.md  MANUAL_DEPLOY.md  MONDAY_LAUNCH_CHECKLIST.md  ON_CALL_QUICK_REFERENCE.md  PRODUCTION_DEPLOYMENT_PLAYBOOK_RU.md  PRODUCTION_DEPLOYMENT_RUNBOOK.md  QUICK_SECRETS_SETUP.md  README.md  ROADMAP.md  SECRETS_NOT_NEEDED.md  STATUS_CHECKS_GUIDE.md  TEST_PROTECTION.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  temp_schemas.txt
.github/: CODEOWNERS  pull_request_template.md
alembic/: env.py
app/: __init__.py  analytics.py  logging_config.py  main.py  monitoring.py
config/: classification_rules.yaml
dashboards/: analysis-api-monitoring.json  datasources.yaml  provisioning.yaml
deploy/: HOW_TO_CONNECT.md
docs/: 00_START_HERE.md  CAPACITY_PLANNING.md  DEPLOYMENT.md  DIGITALOCEAN_SERVER.md  DISASTER_RECOVERY_PLAN.md  DOCUMENTS_INDEX.md  EXECUTIVE_BRIEF.md  FINAL_DELIVERY_MANIFEST.md  FINAL_SUMMARY.md  GITHUB_SECRETS_SETUP.md  GO_LIVE_CHECKLIST.md  GRAFANA.md  INCIDENT_RESPONSE.md  MONTHLY_SLO_REPORT_TEMPLATE.md  ONCALL_QUICK_REFERENCE.md  P0_RUNBOOK_RU.md  PERFORMANCE_BENCHMARKS.md  PROJECT_COMPLETION_CHECKLIST.md  README_START_HERE.md  SERVER_ANALYSIS.md  SLA_DASHBOARD.md  TESTING_GUIDE.md  TZ-001_DNS_SETUP.md  WEEK5_COMPLETION_REPORT.md  WEEK6_COMPLETION_REPORT.md  WEEK7_PLAN.md
(+121 files in other folders)
